--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -2,6 +2,7 @@ import java.util.regex.Matcher
 
 plugins {
     id 'com.android.library'
+//    id 'org.jetbrains.kotlin.android'
 }
 //
 //android {
@@ -60,12 +61,15 @@ android {
     namespace 'com.qiniu.android'
     defaultConfig {
         //applicationId "com.qiniu.android"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode code
         versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -87,6 +91,19 @@ android {
     }
     ndkVersion '20.0.5594570'
 
+    buildFeatures {
+        compose true
+        viewBinding true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.2'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+
 //    useLibrary 'android.test.runner'
 //    useLibrary 'android.test.base'
 //    useLibrary 'android.test.mock'
@@ -102,10 +119,23 @@ dependencies {
 //    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'org.conscrypt:conscrypt-android:2.2.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'com.google.android.material:material:1.4.0'
 
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
 //    androidTestImplementation "androidx.test:runner:1.4.0"
 //    androidTestImplementation "androidx.test:core:1.4.0"
