--- a/JavaProjectDemo/platforms/android/app/src/main/AndroidManifest.xml
+++ b/JavaProjectDemo/platforms/android/app/src/main/AndroidManifest.xml
@@ -3,19 +3,32 @@
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true" android:smallScreens="true" android:xlargeScreens="true" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:hardwareAccelerated="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true"
-
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme"
         >
+
+        <activity
+            android:name=".LaunchActivity"
+            android:exported="true"
+
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
             android:exported="true" android:label="@string/activity_name"
             android:launchMode="singleTop" android:name="MainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.App"
+            android:theme="@style/Theme.App.SplashScreen"
             android:windowSoftInputMode="adjustResize">
-            <intent-filter android:label="@string/launcher_name">
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--            <intent-filter android:label="@string/launcher_name">-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
