--- a/JavaProjectDemo/platforms/android/mylibrary/build.gradle
+++ b/JavaProjectDemo/platforms/android/mylibrary/build.gradle
@@ -152,6 +152,14 @@ dependencies {
 //    androidTestImplementation 'org.testng:testng:6.9.6'
 //    androidTestCompileOnly project(path: ':library')
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'com.appsflyer:af-android-sdk:6.3.2'
+    implementation "com.android.installreferrer:installreferrer:2.2"
+
+
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
 }
 
 task releaseJar(type: Jar, dependsOn: 'build') {
