Commit code. Update time: 2023-06-05

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ intermediary-bundle.aab
 JavaProjectDemo/
 publicSettingFiles_Appsflyer_SDK/
 publicSettingFiles_ADJust_SDK/
+publicSettingFiles_Appsflyer+Firebase_SDK/
